<resources>
    <string name="app_name">mealgo</string>
    <string name="logo_mealgo">logo</string>
    <string name="Welcome_to_MEALGO">Welcome to MEALGO</string>
    <string name="Let_us_help_you_choose">Let us help you choose the best meal!</string>
    <string name="Choose_your_diet">Choose your diet recipe now</string>
    <string name="Search">Search</string>
    <string name="Time">Time</string>
    <string name="All">All</string>
    <string name="Food">Food</string>
    <string name="Drinks">Drinks</string>
    <string name="Black_Search_Icon">Black_Search_Icon</string>
    <string name="White_Left_Arrow">White_Left_Arrow</string>
    <string name="White_Right_Arrow">White_Right_Arrow</string>
    <string name="NewArrivalsTitle">New Arrivals</string>
    <string name="PopularTitle">Popular</string>
    <string name="ExploreTitle">Explore</string>
    <string name="Menu_Story">Menu Story</string>
    <string name="Ingredients_List">Ingredients List</string>
    <string name="Instructions">Instructions</string>



    <string name="GambarMenu1">Gambar Menu 1</string>
    <string name="GambarMenu2">Gambar Menu 2</string>
    <string name="GambarMenu3">Gambar Menu 3</string>
    <string name="GambarMenu4">Gambar Menu 4</string>
    <string name="GambarMenu5">Gambar Menu 5</string>
    <string name="GambarMenu6">Gambar Menu 6</string>
    <string name="GambarMenu7">Gambar Menu 7</string>
    <string name="GambarMenu8">Gambar Menu 8</string>
    <string name="GambarMenu9">Gambar Menu 9</string>
    <string name="GambarMenu10">Gambar Menu 10</string>
    <string name="GambarMenu11">Gambar Menu 11</string>
    <string name="GambarMenu12">Gambar Menu 12</string>
    <string name="GambarMenu13">Gambar Menu 13</string>
    <string name="GambarMenu14">Gambar Menu 14</string>
    <string name="GambarMenu15">Gambar Menu 15</string>
    <string name="GambarMenu16">Gambar Menu 16</string>
    <string name="GambarMenu17">Gambar Menu 17</string>
    <string name="GambarMenu18">Gambar Menu 18</string>

    <string name="TombolMenu1">Tombol Menu 1</string>
    <string name="TombolMenu2">Tombol Menu 2</string>
    <string name="TombolMenu3">Tombol Menu 3</string>
    <string name="TombolMenu4">Tombol Menu 4</string>
    <string name="TombolMenu5">Tombol Menu 5</string>
    <string name="TombolMenu6">Tombol Menu 6</string>
    <string name="TombolMenu7">Tombol Menu 7</string>
    <string name="TombolMenu8">Tombol Menu 8</string>
    <string name="TombolMenu9">Tombol Menu 9</string>
    <string name="TombolMenu10">Tombol Menu 10</string>
    <string name="TombolMenu11">Tombol Menu 11</string>
    <string name="TombolMenu12">Tombol Menu 12</string>
    <string name="TombolMenu13">Tombol Menu 13</string>
    <string name="TombolMenu14">Tombol Menu 14</string>
    <string name="TombolMenu15">Tombol Menu 15</string>
    <string name="TombolMenu16">Tombol Menu 16</string>
    <string name="TombolMenu17">Tombol Menu 17</string>
    <string name="TombolMenu18">Tombol Menu 18</string>

    <string name="Read_more">Read more</string>

    <string name="menu1">Zucchini Noodles Avocado Pesto</string>
    <string name="menu2">Tumeric Golden Milk</string>
    <string name="menu3">Grilled Shrimp Skewers</string>
    <string name="menu4">Cucumber Mint Infused Water</string>
    <string name="menu5">Grilled Salmon Asparagus</string>
    <string name="menu6">Avocado Egg Lettuce Wrap</string>
    <string name="menu7">Matcha Latte</string>
    <string name="menu8">Cauliflower Fried Rice</string>
    <string name="menu9"> Stuffed Bell Peppers</string>
    <string name="menu10">Cold-Pressed Green Juice</string>
    <string name="menu11">Mediterranean Grilled Platter</string>
    <string name="menu12">Herb-Crusted Chicken Breast</string>
    <string name="menu13">Lemon Ginger Detox Water</string>
    <string name="menu14">Baked Sweet Potato</string>
    <string name="menu15">Chickpea Salad Tahini</string>
    <string name="menu16">Iced Black Coffee</string>
    <string name="menu17">Almond Butter Smoothie</string>
    <string name="menu18">Cabbage Rolls</string>

    <string name="Gluten_Free">Gluten-Free</string>
    <string name="Vegan">Vegan</string>
    <string name="Keto">Keto</string>
    <string name="Paleo">Paleo</string>
    <string name="Low_Carb">Low-Carb</string>
    <string name="Mediterranean">Med Diet</string>
    <string name="MediterraneanFull">Mediterranean (Med Diet)</string>
    <string name="Interminttent_Fasting">IF</string>
    <string name="Interminttent_FastingFull">Interminttent Fasting (IF)</string>
    <string name="Whole30">Whole30</string>

    <string name="rounded_74687C">Rounded 74687C</string>

    <string name="time1">15 minutes</string>

    <string name="desc1">A refreshing and healthy alternative to pasta, this..</string>
    <string name="desc2">A soothing and creamy drink made with turmeric, coco..</string>
    <string name="desc3">Juicy shrimp grilled to perfection and drizzled with..</string>
    <string name="desc4">Cool and invigorating, this infused water combines..</string>
    <string name="desc5">This delicious grilled salmon is paired with tender..</string>
    <string name="desc6">Creamy avocado and boiled eggs come together in this..</string>
    <string name="desc7">This Keto-friendly matcha latte is made with almond..</string>
    <string name="desc8">This healthy cauliflower fried rice, combined with tender..</string>
    <string name="desc9">Vibrant bell peppers filled with a hearty mix of quinoa..</string>
    <string name="desc10">A refreshing and nutrient-rich blend of kale, cucumber..</string>
    <string name="desc11">A vibrant assortment of grilled vegetables seasoned..</string>
    <string name="desc12">Tender chicken breast coated in a flavorful blend..</string>
    <string name="desc13">A zesty and revitalizing drink made with fresh lemon..</string>
    <string name="desc14">Soft and naturally sweet, the baked sweet potato..</string>
    <string name="desc15">This light and zesty salad combines tender chickpeas..</string>
    <string name="desc16">Bold black coffee served over ice and infused with..</string>
    <string name="desc17">A creamy and delicious smoothie made with..</string>
    <string name="desc18">Tender cabbage leaves wrapped around seasoned..</string>

    <string name="longdesc1">A refreshing and healthy alternative to pasta, this dish features spiralized zucchini..</string>
    <string name="longdesc2">A soothing and creamy drink made with turmeric, coconut milk, and a touch of spice, this golden milk is both..</string>
    <string name="longdesc3">Juicy shrimp grilled to perfection and drizzled with aromatic garlic butter make these skewers a delightful..</string>
    <string name="longdesc4">Cool and invigorating, this infused water combines crisp cucumber and..</string>
    <string name="longdesc5">This delicious grilled salmon is paired with tender asparagus, offering..</string>
    <string name="longdesc6">Creamy avocado and boiled eggs come together in this flavorful salad, wrapped in..</string>
    <string name="longdesc7">This Keto-friendly matcha latte is made with almond milk, offering a creamy, antioxidant-rich beverage..</string>
    <string name="longdesc8">This healthy cauliflower fried rice, combined with tender chicken, offers a flavorful, low-carb alternative to..</string>
    <string name="longdesc9">Vibrant bell peppers filled with a hearty mix of quinoa, black beans, and savory spices make this dish..</string>
    <string name="longdesc10">A refreshing and nutrient-rich blend of kale, cucumber, and celery, this cold-pressed..</string>
    <string name="longdesc11">A vibrant assortment of grilled vegetables seasoned with Mediterranean spices..</string>
    <string name="longdesc12">Tender chicken breast coated in a flavorful blend of fresh herbs and spices..</string>
    <string name="longdesc13">A zesty and revitalizing drink made with fresh lemon slices and ginger, designed to..</string>
    <string name="longdesc14">Soft and naturally sweet, the baked sweet potato is topped with creamy, nutty tahini sauce for a..</string>
    <string name="longdesc15">This light and zesty salad combines tender chickpeas with fresh veggies and a tangy lemon tahini dressing..</string>
    <string name="longdesc16">Bold black coffee served over ice and infused with a hint of cinnamon for a warm, aromatic twist. this simple..</string>
    <string name="longdesc17">A creamy and delicious smoothie made with almond butter, coconut milk, and a touch of natural sweetness..</string>
    <string name="longdesc18">Tender cabbage leaves wrapped around seasoned ground turkey and cooked in a flavorful sauce..</string>
</resources>