<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_c8bed1"
    tools:context=".SearchActivity">

    <TextView
        android:id="@+id/Search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="25dp"
        android:text="@string/Search"
        android:textColor="@color/c_471d43"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Drawable Rounded Container -->
    <LinearLayout
        android:id="@+id/drawable_container"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_471d43"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Search"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Buttons Inside Drawable -->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Gluten_Free"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:background="transparent"
            android:textAllCaps="false"
            android:drawableStart="@drawable/white_search_icon"
            android:drawablePadding="10dp"
            android:gravity="start|center_vertical"
            android:paddingStart="16dp"
            android:layout_marginVertical="4dp"
            android:layout_marginHorizontal="0dp"
            android:drawableSize="24dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Vegan"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:background="transparent"
            android:textAllCaps="false"
            android:drawableStart="@drawable/white_search_icon"
            android:drawablePadding="10dp"
            android:gravity="start|center_vertical"
            android:paddingStart="16dp"
            android:layout_marginVertical="4dp"
            android:layout_marginHorizontal="0dp"
            android:drawableSize="24dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Keto"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:background="transparent"
            android:textAllCaps="false"
            android:drawableStart="@drawable/white_search_icon"
            android:drawablePadding="10dp"
            android:gravity="start|center_vertical"
            android:paddingStart="16dp"
            android:layout_marginVertical="4dp"
            android:layout_marginHorizontal="0dp"
            android:drawableSize="24dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Paleo"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:background="transparent"
            android:textAllCaps="false"
            android:drawableStart="@drawable/white_search_icon"
            android:drawablePadding="10dp"
            android:gravity="start|center_vertical"
            android:paddingStart="16dp"
            android:layout_marginVertical="4dp"
            android:layout_marginHorizontal="0dp"
            android:drawableSize="24dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Low_Carb"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:background="transparent"
            android:textAllCaps="false"
            android:drawableStart="@drawable/white_search_icon"
            android:drawablePadding="10dp"
            android:gravity="start|center_vertical"
            android:paddingStart="16dp"
            android:layout_marginVertical="4dp"
            android:layout_marginHorizontal="0dp"
            android:drawableSize="24dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/MediterraneanFull"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:background="transparent"
            android:textAllCaps="false"
            android:drawableStart="@drawable/white_search_icon"
            android:drawablePadding="10dp"
            android:gravity="start|center_vertical"
            android:paddingStart="16dp"
            android:layout_marginVertical="4dp"
            android:layout_marginHorizontal="0dp"
            android:drawableSize="24dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Interminttent_FastingFull"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:background="transparent"
            android:textAllCaps="false"
            android:drawableStart="@drawable/white_search_icon"
            android:drawablePadding="10dp"
            android:gravity="start|center_vertical"
            android:paddingStart="16dp"
            android:layout_marginVertical="4dp"
            android:layout_marginHorizontal="0dp"
            android:drawableSize="24dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Whole30"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:background="transparent"
            android:textAllCaps="false"
            android:drawableStart="@drawable/white_search_icon"
            android:drawablePadding="10dp"
            android:gravity="start|center_vertical"
            android:paddingStart="16dp"
            android:layout_marginVertical="4dp"
            android:layout_marginHorizontal="0dp"
            android:drawableSize="24dp"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>