<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_471d43"
    tools:context=".InterminttentActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_ffffff"
        android:padding="12dp"
        android:text="@string/Interminttent_FastingFull"
        android:textColor="@color/c_471d43"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp"
                android:background="@drawable/rounded_c8bed1"
                android:elevation="4dp"
                android:layout_marginBottom="15dp">

                <ImageButton
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_marginEnd="16dp"
                    android:background="@null"
                    android:scaleType="centerCrop"
                    android:src="@drawable/menu13"
                    android:contentDescription="@string/GambarMenu13" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/menu13"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/longdesc13"
                        android:textSize="14sp"
                        android:textColor="@color/black" />

                    <!-- Action Button -->
                    <Button
                        android:layout_width="69dp"
                        android:layout_height="48dp"
                        android:background="transparent"
                        android:text="@string/Read_more"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textAllCaps="false"
                        android:textStyle="bold"
                        android:layout_marginTop="-16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:layout_marginTop="-8dp"
                        android:background="@drawable/rounded_74687c">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginStart="6dp"
                            android:src="@drawable/time_icon"
                            android:contentDescription="@string/Time" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/time1"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:layout_marginStart="2dp"
                            android:layout_marginEnd="10dp"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp"
                android:background="@drawable/rounded_c8bed1"
                android:elevation="4dp"
                android:layout_marginBottom="15dp">

                <ImageButton
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_marginEnd="16dp"
                    android:background="@null"
                    android:scaleType="centerCrop"
                    android:src="@drawable/menu16"
                    android:contentDescription="@string/GambarMenu16" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/menu16"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/longdesc16"
                        android:textSize="14sp"
                        android:textColor="@color/black" />

                    <!-- Action Button -->
                    <Button
                        android:layout_width="69dp"
                        android:layout_height="48dp"
                        android:background="transparent"
                        android:text="@string/Read_more"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textAllCaps="false"
                        android:textStyle="bold"
                        android:layout_marginTop="-16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:layout_marginTop="-8dp"
                        android:background="@drawable/rounded_74687c">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginStart="6dp"
                            android:src="@drawable/time_icon"
                            android:contentDescription="@string/Time" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/time1"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:layout_marginStart="2dp"
                            android:layout_marginEnd="10dp"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>